fix: section padding on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@
   justify-content: center;
 
   @media (max-width: $mobile) {
-    padding: 15px;
+    padding: 15px 0;
   }
 
   &-content {
